[tool.poetry]
name = "slack-notify"
version = "0.1.0"
description = ""
authors = ["Daniel Horton <dancrhorton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
slack-sdk = "^3.16.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"